[tool.poetry]
name = "ab_testing"
version = "0.1.0"
description = ""
authors = ["wenjingyuer <2687802245@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
jupyter = "^1.0.0"
pandas = "^1.4.2"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
